--- a/php7.0-fpm/Dockerfile
+++ b/php7.0-fpm/Dockerfile
@@ -7,9 +7,10 @@ RUN apt-get update && apt-get install -y \
         libpng12-dev \
         libcurl4-gnutls-dev \
         libicu-dev \
+        zlib1g-dev \
         npm \
         git \
-    && docker-php-ext-install -j$(nproc) iconv mcrypt pdo_mysql intl opcache mbstring curl \
+    && docker-php-ext-install -j$(nproc) iconv mcrypt pdo_mysql intl opcache mbstring curl zip \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd
 
