--- a/php7.0-fpm/Dockerfile
+++ b/php7.0-fpm/Dockerfile
@@ -17,4 +17,6 @@ RUN apt-get update && apt-get install -y \
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 RUN apt-get clean
 
+WORKDIR /app
+
 CMD ["php-fpm"]
