Make better config
- Make better docker-compose config with networks instead links
- Make better nginx and php-fpm config
- Simpler fix permission for writable directories in volumes
- Add more test: upload, connect database, writable directories
- Optimize number layers of php-fpm image

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,10 @@ before_install:
 script:
   - docker-compose up -d --build
   - docker-compose ps
+  # change permission for writable directories
+  - docker exec -it dockerforphp_php7_1 /bin/bash /app/fix_perms.sh /app/storage
   # Your test scripts
-  - curl -I http://127.0.0.1:8080
+  - curl --fail -F "image=@`pwd`/.travis.yml" http://127.0.0.1:8080
 
 after_success:
 - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
