--- a/nginx/site.conf
+++ b/nginx/site.conf
@@ -1,25 +1,27 @@
 server {
-    listen 80 default;
-    client_max_body_size 18M;
-    fastcgi_read_timeout 1800;
-
-    access_log /var/log/nginx/nginx-access.log;
-    error_log /var/log/nginx/nginx-errors.log;
+    listen 80 default_server;
+    listen [::]:80 default_server ipv6only=on;
 
     root /app/public;
     index index.php index.html index.htm;
 
+    #server_name server_domain_or_IP;
+
+    client_max_body_size 18M;
+    fastcgi_read_timeout 1800;
+
     location / {
-        try_files $uri $uri/ /index.php$is_args$args;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
-        try_files $uri =404;
+        try_files $uri /index.php =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php7:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
     }
 
