--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
   - docker-compose up -d --build
   - docker-compose ps
   # change permission for writable directories
-  - docker exec -it dockerforphp_php7_1 /bin/bash /app/fix_perms.sh /app/storage
+  - docker exec -it dockerforphp_php7_1 /bin/bash /app/fix_permission.sh /app/storage
   # Your test scripts
   - curl --fail -F "image=@`pwd`/.travis.yml" http://127.0.0.1:8080
 
