--- a/services/php7.0-fpm/Dockerfile
+++ b/services/php7.0-fpm/Dockerfile
@@ -15,6 +15,8 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install -j$(nproc) iconv mcrypt pdo_mysql intl opcache mbstring curl zip \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install -j$(nproc) gd \
+    && pecl install xdebug \
+    && docker-php-ext-enable xdebug \
     && apt-get autoremove \
     && apt-get clean
 
